content: Only drop fallback if sized changed while hidden

Instead of dropping fallback every time a tab goes hidden, only drop
fallback if size changes when the tab was hidden.

Bug: 822442
Change-Id: Ib1ac403f9c76cbb406ca5f85d47f6b789ca9b055
Reviewed-on: https://chromium-review.googlesource.com/965016
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Commit-Queue: Saman Sami <samans@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543830}
Former-commit-id: 747b7b5664f539ce4f58f4aba37c462d1d5c834a